--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
   <!-- Navigation -->
     <header class="navbar navbar-expand-lg p-3" style="background-color: black;">
         <div class="container-fluid"> 
-            <img class="navbar-brand" src="image/logo.png" style="width: 3rem; margin-right: 2em;" alt="logo">
+          <a href="index.html"><img class="navbar-brand" src="image/logo.png" style="width: 3rem; margin-right: 2em;" alt="logo"></a>
         <button class="navbar-toggler collapsed" style="background-color: rgb(100, 182, 100);" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>    
 
         <div class="navbar-collapse collapse" id="navbarSupportedContent">
           <ul class="navbar-nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 text-secondary" style="color: rgb(100, 182, 100) !important;">Главная</a></li>
+            <li><a href="index.html" class="nav-link px-2 text-secondary" style="color: rgb(100, 182, 100) !important;">Главная</a></li>
+            <li><a href="cabinet.html" class="nav-link px-2 text-white">Личный кабинет</a></li>
             <li><a href="#" class="nav-link px-2 text-white">Поиск по объявлениям</a></li>
             <li><a href="#" class="nav-link px-2 text-white">Добавить объявление</a></li>
           </ul>
@@ -40,15 +41,15 @@
             </form>
     
           <div class="text-end d-flex">
-            <button type="button" class="btn btn-outline-light me-2" style="border-color: rgb(100, 182, 100) !important;">Вход</button>
-            <button type="button" class="btn" style="background-color: rgb(100, 182, 100) !important;">Регистрация</button>
+            <a href="login.html"><button type="button" class="btn btn-outline-light me-2" style="border-color: rgb(100, 182, 100) !important;">Вход</button></a>
+            <a href="registration.html"><button type="button" class="btn" style="background-color: rgb(100, 182, 100) !important; color: black !important;">Регистрация</button></a>
           </div>
       </div>
     </div>
   </div>
 </header>
 <!-- MainPage -->
-<main style="min-height: 70vh;">
+<main style="min-height: 70vh; background-color: black;">
   <h2 class="text-center text-white bg-dark mb-md-0" style="padding: 1em;">Найденные животные</h2>
   <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
@@ -60,22 +61,22 @@
       <div class="carousel-item active">
         <img src="image/1.jpg" class="d-block w-75 m-auto" alt="...">
         <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.5);">
-          <h5>Метка первого слайда</h5>
-          <p>Некоторый репрезентативный заполнитель для первого слайда.</p>
+          <h2>Кошка</h2>
+          <p>Серебристая шерстка, желтые глаза, спокойная. Найдена рядом с метро Приморская.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="image/2.jpg" class="d-block w-75 m-auto" alt="...">
         <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.5);">
-          <h5>Метка второго слайда</h5>
-          <p>Некоторый репрезентативный заполнитель для второго слайда.</p>
+          <h2>Овечка</h2>
+          <p>Маленькая овечка, боязливая, на левом ухе темная шерсть, найдена на Звездной.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="image/3.jpg" class="d-block w-75 m-auto" alt="...">
         <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.5);">
-          <h5>Метка третьего слайда</h5>
-          <p>Некоторый репрезентативный заполнитель для третьего слайда.</p>
+          <h2>Кролик</h2>
+          <p>Белый кролик с коричневыми пятнами, хромает на левую заднюю лапку, найден во дворе ул. Ленина 28</p>
         </div>
       </div>
     </div>
@@ -89,51 +90,57 @@
     </button>
   </div>
 
-<h2 class="text-center text-white bg-primary mb-lg-0 p-3 bg-dark">Карточки найденных животных</h2>
+<h2 class="text-center text-white bg-primary mb-lg-0 p-3 bg-dark">Карточки потерянных животных</h2>
 <div class="album py-5 bg-dark">
   <div class="container">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
       <div class="col">
         <div class="card shadow-sm">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          <img class="bd-placeholder-img card-img-top" src="image/4.jpg"/>
           <div class="card-body" style="background-color: black">
-            <p class="card-text" style="color: white;">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text" style="color: white;">Пропал котенок! Белая шерсть, голубые глаза, очень игривый.</p>
+            <p class="card-text" style="color: white;">Адрес: ул. Кораблестроителей 183, Василеостровский район</p>
+            <p class="card-text" style="color: white;">Дата: 20.01.2023</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a href="card1.html"><button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button></a>
+                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
+              </div>
+              <small class="text-body-secondary" style="color: white !important;">Сейчас</small>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card shadow-sm">
+         <img class="bd-placeholder-img card-img-top" src="image/5.jpg"/>
+          <div class="card-body" style="background-color: black">
+            <p class="card-text" style="color: white;">Пропала кошка! Серая шерсть, голубые глаза, спокойная и доверчивая.</p>
+            <p class="card-text" style="color: white;">Адрес: ул. Сталина 13, <br>Приморский район</p>
+            <p class="card-text" style="color: white;">Дата: 10.11.2023</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white;border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
               </div>
-              <small class="text-body-secondary">Сейчас</small>
+              <small class="text-body-secondary" style="color: white !important;">1 мин. назад</small>
             </div>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <img class="bd-placeholder-img card-img-top" src="image/6.jpg"/>
+          <div class="card-body" style="background-color: black">
+            <p class="card-text" style="color: white;">Пропала собака! Коричневая шерсть, карие глаза, очень игривая и радостная.</p>
+            <p class="card-text" style="color: white;">Адрес: ул. Мира 3, <br>Адмиралтейский район</p>
+            <p class="card-text" style="color: white;">Дата: 05.03.2023</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">Подробнее</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Откликнуться</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
               </div>
-              <small class="text-body-secondary">1 мин. назад</small>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card shadow-sm">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">Подробнее</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Откликнуться</button>
-              </div>
-              <small class="text-body-secondary">Сейчас</small>
+              <small class="text-body-secondary" style="color: white !important;">Сейчас</small>
             </div>
           </div>
         </div>
@@ -141,45 +148,51 @@
 
       <div class="col">
         <div class="card shadow-sm">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+         <img class="bd-placeholder-img card-img-top" src="image/7.jpg"/>
+          <div class="card-body" style="background-color: black">
+            <p class="card-text" style="color: white;">Пропала собака! Мопс! Серая шерсть, черные глаза, очень грустный :(</p>
+            <p class="card-text" style="color: white;">Адрес: ул. Травки 7, <br>Выборгский район</p>
+            <p class="card-text" style="color: white;">Дата: 23.06.2023</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">Подробнее</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Откликнуться</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
               </div>
-              <small class="text-body-secondary">30 мин. назад</small>
+              <small class="text-body-secondary" style="color: white !important;">30 мин. назад</small>
             </div>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <img class="bd-placeholder-img card-img-top" src="image/8.jpg" style="width: 100%; height: 330px;"/>
+          <div class="card-body" style="background-color: black">
+            <p class="card-text" style="color: white;">Пропал хомяк! Белая шерсть, очень злобный, оторвал ноготь хозяину, осторожнее!</p>
+            <p class="card-text" style="color: white;">Адрес: ул. Сессии 12, <br>Василеостровский район</p>
+            <p class="card-text" style="color: white;">Дата: 20.01.2023</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">Подробнее</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Откликнуться</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
               </div>
-              <small class="text-body-secondary">7 мин. назад</small>
+              <small class="text-body-secondary" style="color: white !important;">7 мин. назад</small>
             </div>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card shadow-sm">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-          <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <img class="bd-placeholder-img card-img-top" src="image/9.jpg" style="width: 80%;"/>
+          <div class="card-body" style="background-color: black">
+            <p class="card-text" style="color: white;">Пропала морская свинка! Коричневая шерсть, белая морда, очень тупая.</p>
+            <p class="card-text" style="color: white;">Адрес: ул. Зимняя 73, <br>Кировский район</p>
+            <p class="card-text" style="color: white;">Дата: 20.01.2023</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">Подробнее</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Откликнуться</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
               </div>
-              <small class="text-body-secondary">3 мин. назад</small>
+              <small class="text-body-secondary" style="color: white !important;">3 мин. назад</small>
             </div>
           </div>
         </div>
@@ -188,16 +201,44 @@
   </div>
 </div>
 
-<h2 class="text-center text-white bg-primary m-2">Подписка на новости</h2>
-<form class="w-50 m-auto p-3" style="min-width: 300px;">
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Введите адрес электронной почты</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">Мы никогда не делимся Вашими e-mail ни с кем.</div>
-  </div>
+<div class="container" style="background-color: black; color: white;">
+  <footer class="py-5">
+    <div class="row">
+      <div class="col-6 col-md-2 mb-3">
+        <h5>GetPetBack</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Главная</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary" style="color: white !important;">Поиск по объявлениям</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary" style="color: white !important;">Добавить объявление</a></li>
+          <li class="nav-item mb-2"><a href="cabinet.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Личный кабинет</a></li>
+          <li class="nav-item mb-2"><a href="registration.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Регистрация</a></li>
+        </ul>
+      </div>
 
-  <button type="submit" class="btn btn-primary">Подписаться</button>
-</form>
+      <div class="col-md-8 offset-md-1 mb-3">
+        <form>
+          <h5>Подпишитесь на наши новости</h5>
+          <p>Делайте добро, воссоединяйте животных и их хозяев вместе с нами.</p>
+          <div class="d-flex flex-column flex-sm-row w-100 gap-2 mb-2">
+            <label for="newsletter1" class="visually-hidden">Адрес эл. почты</label>
+            <input id="newsletter1" type="text" class="form-control" placeholder="Адрес эл. почты">
+            <button class="btn btn-primary" type="button" style="background-color: rgb(100, 182, 100) !important; border: none;">Подписаться</button>
+          </div>
+          <p>// Мы никому не разглашаем ваш адрес эл. почты</p>
+        </form>
+      </div>
+    </div>
+
+    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+      <p>© 2023 GetPetBack. Все права защищены.</p>
+      <ul class="list-unstyled" style="display: flex; justify-content: end; width: 50%;">
+        <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/twitter.png" width="50px"></a></li>
+        <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/facebook.png" width="50px"></a></li>
+        <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/instagram.png" width="50px"></a></li>
+      </ul>
+    </div>
+  </footer>
+</div>
 </main>
 
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
