--- a/card4.html
+++ b/card4.html
@@ -55,16 +55,16 @@
               <div class="card py-4 bg-dark" style="border-radius: 15px;">
                 <div class="d-flex justify-content-center card-body p-4">
                   <div class="d-flex text-white" style="flex-wrap: wrap !important;">
-                      <img src="image/4.jpg"
+                      <img src="image/7.jpg"
                         alt="Generic placeholder image" class="img-fluid"
                         style="width: 350px; border-radius: 10px;">
                     <div class="flex-grow-1 ms-3">
-                      <h5 class="mb-1">Диджей Виталя</h5>
-                      <p class="mb-2 pb-1">Кот</p>
+                      <h5 class="mb-1">Чмоня</h5>
+                      <p class="mb-2 pb-1">Собака</p>
                       <div class="justify-content-start rounded-3 p-2 mb-2">
-                        <p>Пропал котенок! Белая шерсть, голубые глаза, очень игривый.</p> 
-                        <p>Адрес: ул. Кораблестроителей 183, Василеостровский район. Звонить на мобильный телефон: +7(000)-123-12-12</p> 
-                        <p>Дата: 20.01.2023</p>
+                        <p>Пропала собака! Мопс! Серая шерсть, черные глаза, очень грустный :(</p> 
+                        <p>Адрес: ул. Травки 7, Выборгский район Звонить на мобильный телефон: +7(100)-321-21-21</p> 
+                        <p>Дата: 23.06.2023</p>
                       </div>
                       <div class="d-flex pt-1" style="width: 50%;">
                         <button type="button" class="btn btn-outline-primary me-1 flex-grow-1" style="border-color: rgb(100, 182, 100) !important; color: rgb(100, 182, 100);">Чат с хозяином</button>
