--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <ul class="navbar-nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="index.html" class="nav-link px-2 text-secondary" style="color: rgb(100, 182, 100) !important;">Главная</a></li>
             <li><a href="cabinet.html" class="nav-link px-2 text-white">Личный кабинет</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Поиск по объявлениям</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Добавить объявление</a></li>
+            <li><a href="search.html" class="nav-link px-2 text-white">Поиск по объявлениям</a></li>
+            <li><a href="add.html" class="nav-link px-2 text-white">Добавить объявление</a></li>
           </ul>
     
           <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -95,104 +95,104 @@
   <div class="container">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
       <div class="col">
-        <div class="card shadow-sm">
+        <div class="card shadow-sm d-flex">
           <img class="bd-placeholder-img card-img-top" src="image/4.jpg"/>
           <div class="card-body" style="background-color: black">
             <p class="card-text" style="color: white;">Пропал котенок! Белая шерсть, голубые глаза, очень игривый.</p>
             <p class="card-text" style="color: white;">Адрес: ул. Кораблестроителей 183, Василеостровский район</p>
             <p class="card-text" style="color: white;">Дата: 20.01.2023</p>
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center flex-wrap">
               <div class="btn-group">
                 <a href="card1.html"><button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button></a>
                 <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
               </div>
-              <small class="text-body-secondary" style="color: white !important;">Сейчас</small>
+              <small class="text-body-secondary" style="color: white !important; padding-top: 1em;">Сейчас</small>
             </div>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card shadow-sm">
+        <div class="card shadow-sm d-flex">
          <img class="bd-placeholder-img card-img-top" src="image/5.jpg"/>
           <div class="card-body" style="background-color: black">
             <p class="card-text" style="color: white;">Пропала кошка! Серая шерсть, голубые глаза, спокойная и доверчивая.</p>
             <p class="card-text" style="color: white;">Адрес: ул. Сталина 13, <br>Приморский район</p>
             <p class="card-text" style="color: white;">Дата: 10.11.2023</p>
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center flex-wrap">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button>
+                <a href="card2.html"><button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button></a>
                 <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
               </div>
-              <small class="text-body-secondary" style="color: white !important;">1 мин. назад</small>
+              <small class="text-body-secondary" style="color: white !important; padding-top: 1em;">1 мин. назад</small>
             </div>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card shadow-sm">
+        <div class="card shadow-sm d-flex">
           <img class="bd-placeholder-img card-img-top" src="image/6.jpg"/>
           <div class="card-body" style="background-color: black">
             <p class="card-text" style="color: white;">Пропала собака! Коричневая шерсть, карие глаза, очень игривая и радостная.</p>
             <p class="card-text" style="color: white;">Адрес: ул. Мира 3, <br>Адмиралтейский район</p>
             <p class="card-text" style="color: white;">Дата: 05.03.2023</p>
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center flex-wrap">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button>
+                <a href="card3.html"><button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button></a>
                 <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
               </div>
-              <small class="text-body-secondary" style="color: white !important;">Сейчас</small>
+              <small class="text-body-secondary" style="color: white !important; padding-top: 1em;">Сейчас</small>
             </div>
           </div>
         </div>
       </div>
 
       <div class="col">
-        <div class="card shadow-sm">
+        <div class="card shadow-sm d-flex">
          <img class="bd-placeholder-img card-img-top" src="image/7.jpg"/>
           <div class="card-body" style="background-color: black">
             <p class="card-text" style="color: white;">Пропала собака! Мопс! Серая шерсть, черные глаза, очень грустный :(</p>
             <p class="card-text" style="color: white;">Адрес: ул. Травки 7, <br>Выборгский район</p>
             <p class="card-text" style="color: white;">Дата: 23.06.2023</p>
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center flex-wrap">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button>
+                <a href="card4.html"><button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button></a>
                 <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
               </div>
-              <small class="text-body-secondary" style="color: white !important;">30 мин. назад</small>
+              <small class="text-body-secondary" style="color: white !important; padding-top: 1em;">30 мин. назад</small>
             </div>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card shadow-sm">
+        <div class="card shadow-sm d-flex">
           <img class="bd-placeholder-img card-img-top" src="image/8.jpg" style="width: 100%; height: 330px;"/>
           <div class="card-body" style="background-color: black">
             <p class="card-text" style="color: white;">Пропал хомяк! Белая шерсть, очень злобный, оторвал ноготь хозяину, осторожнее!</p>
             <p class="card-text" style="color: white;">Адрес: ул. Сессии 12, <br>Василеостровский район</p>
             <p class="card-text" style="color: white;">Дата: 20.01.2023</p>
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center flex-wrap">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button>
+                <a href="card5.html"><button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button></a>
                 <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
               </div>
-              <small class="text-body-secondary" style="color: white !important;">7 мин. назад</small>
+              <small class="text-body-secondary" style="color: white !important; padding-top: 1em;">7 мин. назад</small>
             </div>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card shadow-sm">
+        <div class="card shadow-sm d-flex">
           <img class="bd-placeholder-img card-img-top" src="image/9.jpg" style="width: 80%;"/>
           <div class="card-body" style="background-color: black">
             <p class="card-text" style="color: white;">Пропала морская свинка! Коричневая шерсть, белая морда, очень тупая.</p>
             <p class="card-text" style="color: white;">Адрес: ул. Зимняя 73, <br>Кировский район</p>
             <p class="card-text" style="color: white;">Дата: 20.01.2023</p>
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center flex-wrap">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button>
+                <a href="card6.html"><button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button></a>
                 <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
               </div>
-              <small class="text-body-secondary" style="color: white !important;">3 мин. назад</small>
+              <small class="text-body-secondary" style="color: white !important; padding-top: 1em;">3 мин. назад</small>
             </div>
           </div>
         </div>
@@ -208,8 +208,8 @@
         <h5>GetPetBack</h5>
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Главная</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary" style="color: white !important;">Поиск по объявлениям</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary" style="color: white !important;">Добавить объявление</a></li>
+          <li class="nav-item mb-2"><a href="search.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Поиск по объявлениям</a></li>
+          <li class="nav-item mb-2"><a href="add.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Добавить объявление</a></li>
           <li class="nav-item mb-2"><a href="cabinet.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Личный кабинет</a></li>
           <li class="nav-item mb-2"><a href="registration.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Регистрация</a></li>
         </ul>
@@ -231,7 +231,7 @@
 
     <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
       <p>© 2023 GetPetBack. Все права защищены.</p>
-      <ul class="list-unstyled" style="display: flex; justify-content: end; width: 50%;">
+      <ul class="list-unstyled d-flex" style="width: 22%;">
         <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/twitter.png" width="50px"></a></li>
         <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/facebook.png" width="50px"></a></li>
         <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/instagram.png" width="50px"></a></li>
