--- a/registration.html
+++ b/registration.html
@@ -25,8 +25,8 @@
           <ul class="navbar-nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="index.html" class="nav-link px-2 text-secondary" style="color: rgb(100, 182, 100) !important;">Главная</a></li>
             <li><a href="cabinet.html" class="nav-link px-2 text-white">Личный кабинет</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Поиск по объявлениям</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Добавить объявление</a></li>
+            <li><a href="search.html" class="nav-link px-2 text-white">Поиск по объявлениям</a></li>
+            <li><a href="add.html" class="nav-link px-2 text-white">Добавить объявление</a></li>
           </ul>
     
           <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -107,8 +107,8 @@
           <h5>GetPetBack</h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Главная</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary" style="color: white !important;">Поиск по объявлениям</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary" style="color: white !important;">Добавить объявление</a></li>
+            <li class="nav-item mb-2"><a href="search.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Поиск по объявлениям</a></li>
+            <li class="nav-item mb-2"><a href="add.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Добавить объявление</a></li>
             <li class="nav-item mb-2"><a href="cabinet.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Личный кабинет</a></li>
             <li class="nav-item mb-2"><a href="registration.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Регистрация</a></li>
           </ul>
@@ -130,7 +130,7 @@
   
       <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
         <p>© 2023 GetPetBack. Все права защищены.</p>
-        <ul class="list-unstyled" style="display: flex; justify-content: end; width: 50%;">
+        <ul class="list-unstyled d-flex" style="width: 22%;">
           <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/twitter.png" width="50px"></a></li>
           <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/facebook.png" width="50px"></a></li>
           <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/instagram.png" width="50px"></a></li>
