--- a/card6.html
+++ b/card6.html
@@ -55,15 +55,15 @@
               <div class="card py-4 bg-dark" style="border-radius: 15px;">
                 <div class="d-flex justify-content-center card-body p-4">
                   <div class="d-flex text-white" style="flex-wrap: wrap !important;">
-                      <img src="image/4.jpg"
+                      <img src="image/9.jpg"
                         alt="Generic placeholder image" class="img-fluid"
                         style="width: 350px; border-radius: 10px;">
                     <div class="flex-grow-1 ms-3">
-                      <h5 class="mb-1">Диджей Виталя</h5>
-                      <p class="mb-2 pb-1">Кот</p>
+                      <h5 class="mb-1">Шпендик</h5>
+                      <p class="mb-2 pb-1">Морская свинота</p>
                       <div class="justify-content-start rounded-3 p-2 mb-2">
-                        <p>Пропал котенок! Белая шерсть, голубые глаза, очень игривый.</p> 
-                        <p>Адрес: ул. Кораблестроителей 183, Василеостровский район. Звонить на мобильный телефон: +7(000)-123-12-12</p> 
+                        <p>Пропала морская свинка! Коричневая шерсть, белая морда, очень тупая.</p> 
+                        <p>Адрес: ул. Зимняя 73, Кировский район Звонить на мобильный телефон: +7(901)-993-92-19</p> 
                         <p>Дата: 20.01.2023</p>
                       </div>
                       <div class="d-flex pt-1" style="width: 50%;">
